# model-config/petstore/openapi.yaml
@@ -21,6 +21,12 @@ paths:
           schema:
             type: integer
             format: int32
+        - name: maxId
+          in: query
+          required: false
+          schema:
+            type: integer
+            format: int32
       security:
         - petstore_auth:
             - 'read:pets'
@@ -52,7 +58,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
     post:
-      summary: Create or Update a pet
+      summary: Create a pet
       operationId: createPets
       requestBody:
         description: Pet to add to the store
@@ -88,7 +94,8 @@ paths:
           required: true
           description: The id of the pet to retrieve
           schema:
-            type: string
+            type: integer
+            format: int32
       security:
         - petstore_auth:
             - 'read:pets'
@@ -109,6 +116,34 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
+    put:
+      summary: Update a specific pet
+      operationId: putPetById
+      requestBody:
+        description: Pet to add to the store
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Pet'
+      tags:
+        - pets
+      security:
+        - petstore_auth:
+            - 'read:pets'
+            - 'write:pets'
+      responses:
+        '200':
+          description: Null response
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error: 
+                    type: string
     delete:
       summary: Delete a specific pet
       operationId: deletePetById
@@ -165,7 +200,6 @@ components:
     Pet:
       type: object
       required:
-        - id
         - name
       properties:
         id:
